Autotools fix: missing file
git-svn-id: file:///home/code/svn/ovd/trunk@5865 2b2718be-6ee5-4ec5-ad1a-3fa14f9c7ca3

--- a/SessionManager/web/admin/media/image/Makefile.am
+++ b/SessionManager/web/admin/media/image/Makefile.am
@@ -16,7 +16,8 @@ scripts_DATA = server-linux.png \
                show.png \
                ulteo.png \
                view.png \
-               server-weblink.png
+               server-weblink.png \
+               temp_icon.php
 
 scriptsdir = $(datadir)/ulteo/sessionmanager/admin/media/image
 
