Improvement: mimetype-icon client webservice
git-svn-id: file:///home/code/svn/ovd/trunk@5877 2b2718be-6ee5-4ec5-ad1a-3fa14f9c7ca3

--- a/SessionManager/web/admin/media/image/Makefile.am
+++ b/SessionManager/web/admin/media/image/Makefile.am
@@ -5,6 +5,7 @@ scripts_DATA = server-linux.png \
                cache.php \
                submenu_bg.png \
                download.png \
+               empty.png \
                error.png \
                favicon.ico \
                header.png \
