Improvement: remove useless executable for py2exe version of OvdServer and OvdShells
git-svn-id: file:///home/code/svn/ovd/trunk@5893 2b2718be-6ee5-4ec5-ad1a-3fa14f9c7ca3

--- a/ApplicationServer/OvdShells/setup.py.in
+++ b/ApplicationServer/OvdShells/setup.py.in
@@ -60,6 +60,7 @@ elif sys.platform == "win32":
 
     setup_args["zipfile"] = "lib/shared.zip"
     setup_args["windows"] = ["OvdDesktop", "OvdRemoteApps", "startovdapp"]
+    setup_args["options"] = {"py2exe": {"dll_excludes": ["w9xpopen.exe"]}}
 
 else:
    raise Exception("No supported platform")
