Feature: UserGroupDBDynamic and UserGroupDBDynamicCached can be disable
git-svn-id: file:///home/code/svn/ovd/trunk@5922 2b2718be-6ee5-4ec5-ad1a-3fa14f9c7ca3

--- a/SessionManager/configure.ac.in
+++ b/SessionManager/configure.ac.in
@@ -143,6 +143,8 @@ web/modules/Makefile
 web/modules/SessionManagement/Makefile
 web/modules/AuthMethod/Makefile
 web/modules/UserGroupDB/Makefile
+web/modules/UserGroupDBDynamic/Makefile
+web/modules/UserGroupDBDynamicCached/Makefile
 web/modules/UserDB/Makefile
 web/modules/ApplicationDB/Makefile
 web/modules/ApplicationsGroupDB/Makefile
