--- a/client/java/build.xml.in
+++ b/client/java/build.xml.in
@@ -1,12 +1,12 @@
 <?xml version="1.0"?>
 <!--
- Copyright (C) 2008-2010 Ulteo SAS
+ Copyright (C) 2008-2011 Ulteo SAS
  http://www.ulteo.com
  Author Gauvain POCENTEK <gpocentek@linutop.com> 2008-2009
  Author Julien LANGLOIS <julien@ulteo.com> 2009-2010
  Author Jeremy DESVAGES <jeremy@ulteo.com> 2009-2010
  Author Samuel BOVEE <samuel@ulteo.com> 2010
- Author Thomas MOUTON <thomas@ulteo.com> 2010
+ Author Thomas MOUTON <thomas@ulteo.com> 2010-2011
  Author David LECHEVALIER <david@ulteo.com> 2010
  Author Guillaume DUPAS <guillaume@ulteo.com> 2010
 
@@ -80,6 +80,7 @@
     <copy todir="build/resources/keymaps">
       <fileset dir="keymaps"/>
     </copy>
+    <echo file="build/VERSION" message="${version}" />
     <mkdir dir="jars"/>
     <mkdir dir="dist"/>
   </target>
