Bugfix: add explicit plugin.jar in applet classpath to implement netscape.javascript.JSObject
git-svn-id: file:///home/code/svn/ovd/trunk@5947 2b2718be-6ee5-4ec5-ad1a-3fa14f9c7ca3

--- a/client/java/build.xml.in
+++ b/client/java/build.xml.in
@@ -282,6 +282,7 @@
            target="1.5" source="1.5" includes="org/ulteo/ovd/applet/**.java" >
       <classpath>
         <path refid="minimal.path" />
+        <pathelement location="${java.home}/lib/plugin.jar"/>
         <pathelement location="required_libraries/jai_codec.jar"/>
         <pathelement location="required_libraries/jai_core.jar"/>
         <pathelement location="required_libraries/js.jar"/>
