--- a/client/java/build.xml.in
+++ b/client/java/build.xml.in
@@ -145,7 +145,7 @@
  </target>
 
  <target name="PDFPrinter.install" depends="PDFPrinter.jar"
-         description="install PDFPrinter" />
+         description="install PDFPrinter" >
    <copy file="jars/PDFPrinter-${compile.release}.jar" todir="${applets.dir}" />
    <symlink link="${applets.dir}/PDFPrinter.jar"
             resource="PDFPrinter-${compile.release}.jar"/>
