--- a/OvdServer/setup.py.in
+++ b/OvdServer/setup.py.in
@@ -1,9 +1,9 @@
 #!/usr/bin/python
 # -*- coding: UTF-8 -*-
 
-# Copyright (C) 2010 Ulteo SAS
+# Copyright (C) 2010-2011 Ulteo SAS
 # http://www.ulteo.com
-# Author Julien LANGLOIS <julien@ulteo.com> 2010
+# Author Julien LANGLOIS <julien@ulteo.com> 2010, 2011
 # Author Samuel BOVEE    <samuel@ulteo.com> 2010
 #
 # This program is free software; you can redistribute it and/or
@@ -20,6 +20,7 @@
 # along with this program; if not, write to the Free Software
 # Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
 
+import os
 import sys
 from distutils.core import setup
 
@@ -70,6 +71,21 @@ if sys.platform == "win32":
 	setup_args["console"] = ["ulteo-ovd-slaveserver"]
 	setup_args["service"] = [ServiceTarget()]
 	setup_args["options"] = {"py2exe": {"dll_excludes": ["w9xpopen.exe"]}}
+	
+	# if python > 2.5
+	if sys.version_info[0]>2 or (sys.version_info[0]==2 and sys.version_info[1]>5):
+		files = []
+		for f in ["msvcr90.dll", "Microsoft.VC90.CRT.manifest"]:
+			path = os.path.join(os.path.dirname(sys.executable), f)
+			if not os.path.exists(path):
+				print >> sys.stderr, "Missing file '%s', unable to continue"%(path)
+				sys.exit(1)
+			
+			files.append(path)
+		
+		setup_args["data_files"] = []
+		setup_args["data_files"].append((".", files))
+		setup_args["data_files"].append(("lib", files))
 
 
 elif sys.platform == "linux2":
