--- a/client/java/build.xml.in
+++ b/client/java/build.xml.in
@@ -36,7 +36,6 @@
   <property name="keystore.password" value=""/>
   <property name="version"           value="@VERSION@" />
   <property name="mingw32.prefix"    value="i586-mingw32msvc-"/>
-  <property name="languages"         value="false" />
 
   <property name="destdir"      location="" />
   <property name="prefix"       location="/usr/local" />
@@ -209,7 +208,7 @@
     </exec>
   </target>
 
-  <target name="generate.languages" if="${languages}">
+  <target name="generate.languages" if="languages">
     <foreach target="generate.lang" param="po.file" >
       <path><fileset dir="po" includes="*.po" /></path>
     </foreach>
