Imrpovement: add offline installation method
git-svn-id: file:///home/code/svn/ovd/trunk@5990 2b2718be-6ee5-4ec5-ad1a-3fa14f9c7ca3

--- a/docs/Makefile
+++ b/docs/Makefile
@@ -37,7 +37,8 @@ DST=$(SRC:.xml=.html)
 PDF=$(SRC:.xml=.pdf)
 ANW=$(SRC:.xml=.anw)
 
-all: $(DST) $(PDF)
+all: $(DST) 
+#$(PDF)
 
 # Add the depends between sources
 Installation_Iso.xml: Easy_Installation.xml
