Bugfix: ant syntax
git-svn-id: file:///home/code/svn/ovd/trunk@6002 2b2718be-6ee5-4ec5-ad1a-3fa14f9c7ca3

--- a/client/java/build.xml.in
+++ b/client/java/build.xml.in
@@ -309,7 +309,8 @@
     <antcall target="precompile" />
     <javac srcdir="src:src1.4" destdir="build" encoding="UTF8"
            target="1.5" source="1.5" includes="org/ulteo/vdi/Client.java">
-      <classpath refid="minimal.path" >
+      <classpath>
+        <path refid="minimal.path" />
         <pathelement location="required_libraries/jpedal.jar"/>
       </classpath>
     </javac>
