--- a/client/java/build.xml.in
+++ b/client/java/build.xml.in
@@ -31,6 +31,7 @@
       <pathelement location="required_libraries/ant-contrib-1.0b3.jar"/>
     </classpath>
   </taskdef>
+  <property name="build.sysclasspath" value="last"/>
 
   <property name="build.cert"        value="certificate"/>
   <property name="keystore.password" value=""/>
