Packaging: add ant option to compile languages for native client (bis)
git-svn-id: file:///home/code/svn/ovd/trunk@6012 2b2718be-6ee5-4ec5-ad1a-3fa14f9c7ca3

--- a/packaging/windows/ovd-native-client/package.conf
+++ b/packaging/windows/ovd-native-client/package.conf
@@ -10,7 +10,7 @@ source_remove_files:
   - windowsPathsJNI
 
 compile_commands:
-  - ant ovdNativeClient.jar
+  - ant ovdNativeClient.jar -Dlanguages=true
 
 binary_files:
   - jars\OVDNativeClient.jar
