--- a/ApplicationServer/OvdShells/setup.py.in
+++ b/ApplicationServer/OvdShells/setup.py.in
@@ -1,9 +1,9 @@
 #!/usr/bin/python
 # -*- coding: UTF-8 -*-
 
-# Copyright (C) 2010 Ulteo SAS
+# Copyright (C) 2010-2011 Ulteo SAS
 # http://www.ulteo.com
-# Author Julien LANGLOIS <julien@ulteo.com> 2010
+# Author Julien LANGLOIS <julien@ulteo.com> 2010, 2011
 # Author Samuel BOVEE    <samuel@ulteo.com> 2010
 #
 # This program is free software; you can redistribute it and/or 
@@ -61,6 +61,21 @@ elif sys.platform == "win32":
     setup_args["zipfile"] = "lib/shared.zip"
     setup_args["windows"] = ["OvdDesktop", "OvdRemoteApps", "startovdapp"]
     setup_args["options"] = {"py2exe": {"dll_excludes": ["w9xpopen.exe"]}}
+
+    # if python > 2.5
+    if sys.version_info[0]>2 or (sys.version_info[0]==2 and sys.version_info[1]>5):
+        files = []
+        for f in ["msvcr90.dll", "Microsoft.VC90.CRT.manifest"]:
+            path = os.path.join(os.path.dirname(sys.executable), f)
+            if not os.path.exists(path):
+                print >> sys.stderr, "Missing file '%s', unable to continue"%(path)
+                sys.exit(1)
+
+            files.append(path)
+    
+        setup_args["data_files"] = []
+        setup_args["data_files"].append((".", files))
+        setup_args["data_files"].append(("lib", files))
 
 else:
    raise Exception("No supported platform")
