Packaging: remove useless dependency
git-svn-id: file:///home/code/svn/ovd/trunk@6023 2b2718be-6ee5-4ec5-ad1a-3fa14f9c7ca3

--- a/packaging/debian/ovd-slaveserver/hardy/control
+++ b/packaging/debian/ovd-slaveserver/hardy/control
@@ -9,7 +9,7 @@ XS-Python-Version: >= 2.5
 
 Package: ulteo-ovd-slaveserver
 Architecture: all
-Depends: ${python:Depends}, debconf, python-twisted-web, tmpreaper
+Depends: ${python:Depends}, debconf, tmpreaper
 Description: Ulteo Open Virtual Desktop - slave server
  This daemon manages the Open Virtual Desktop servers.
 
