--- a/packaging/debian/ovd-java-clients/hardy/rules
+++ b/packaging/debian/ovd-java-clients/hardy/rules
@@ -14,7 +14,7 @@ DEB_ANT_ARGS += -Dprefix=/usr -Dbuild.type=stripped -Ddestdir=$(DEB_DESTDIR) -Db
 DEB_JARS += $(ANT_HOME)/lib/ant-nodeps.jar # debian bug #420287
 
 build/libovd-xclient-area::
-	cd libXClientArea ; make JAVAHOME=$(JAVA_HOME)
+	cd libXClientArea ; make clean ; make JAVAHOME=$(JAVA_HOME)
 
 install/libovd-xclient-area::
 	cd libXClientArea ; make install DESTDIR=$(CURDIR)/$(DEB_DH_INSTALL_SOURCEDIR)
