Bugfix: prefer the use of the official Microsoft Visual C++ redistribuable executable instead of manually copying the library
git-svn-id: file:///home/code/svn/ovd/trunk@6058 2b2718be-6ee5-4ec5-ad1a-3fa14f9c7ca3

--- a/packaging/windows/setup-aps/setup.conf
+++ b/packaging/windows/setup-aps/setup.conf
@@ -21,6 +21,10 @@ arch:
           extern:
             - jre
     
+    vcredist:
+      extern:
+        - vcredist
+    
     printer:
       childs:
         i386:
