Fix the previous commit (r6088), forgot the autotools files ...
git-svn-id: file:///home/code/svn/ovd/trunk@6086 2b2718be-6ee5-4ec5-ad1a-3fa14f9c7ca3

--- a/client/web/web/Makefile.am
+++ b/client/web/web/Makefile.am
@@ -1,6 +1,7 @@
 SUBDIRS = applet includes media PEAR
 
-scripts_DATA = external.php \
+scripts_DATA = applications.php \
+               external.php \
                icon.php \
                index.php \
                login.php \
