Bugfix: PDFPrinter driver must be tagged in order to be updatable
git-svn-id: file:///home/code/svn/ovd/trunk@6099 2b2718be-6ee5-4ec5-ad1a-3fa14f9c7ca3

--- a/packaging/windows/pdf-printer-driver-x86/package.conf
+++ b/packaging/windows/pdf-printer-driver-x86/package.conf
@@ -1,6 +1,14 @@
 
 svn_root: ApplicationServer\windows\PDFPrinterDriver
 
+pre_sources_commads:
+  - python autogen
+
+source_remove_files:
+  - autogen
+  - ulteodll.inf.in
+
+
 compile_commands:
   - call make86.bat
 
