--- a/ApplicationServer/windows/PDFPrinterDriver/ulteodll.inf.in
+++ b/ApplicationServer/windows/PDFPrinterDriver/ulteodll.inf.in
@@ -13,6 +13,7 @@ LayoutFile=ntprint.inf
 Class=Printer
 ClassGUID={4D36E979-E325-11CE-BFC1-08002BE10318}
 DriverVer=17/05/2008,1.0.0.0
+Version=@VERSION@
 
 ;
 ; Manufacturer section.
