--- a/packaging/windows/pdf-printer-driver-amd64/package.conf
+++ b/packaging/windows/pdf-printer-driver-amd64/package.conf
@@ -1,6 +1,13 @@
 
 svn_root: ApplicationServer\windows\PDFPrinterDriver
 
+pre_sources_commads:
+  - python autogen
+
+source_remove_files:
+  - autogen
+  - ulteodll.inf.in
+
 compile_commands:
   - call make64.bat
 
