Improved summary page for SM admin
git-svn-id: file:///home/code/svn/ovd/trunk@6100 2b2718be-6ee5-4ec5-ad1a-3fa14f9c7ca3

--- a/SessionManager/web/admin/Makefile.am
+++ b/SessionManager/web/admin/Makefile.am
@@ -49,6 +49,7 @@ scripts_DATA = actions.php \
                sharedfolders.php \
                session-reporting.php \
                sessions.php \
+               summary.php \
                sumup.php \
                tasks.php \
                users.php \
