Bugfix: add jpedal.jar in distribution's packages
git-svn-id: file:///home/code/svn/ovd/trunk@6145 2b2718be-6ee5-4ec5-ad1a-3fa14f9c7ca3

--- a/client/java/build.xml.in
+++ b/client/java/build.xml.in
@@ -300,7 +300,7 @@
   <target name="applet.install" description="install applets"
           depends="applet.jar">
     <copy todir="${applets.dir}">
-      <filelist dir="jars" files="log4j-1.2.jar ulteo-applet.jar CheckJava.jar" />
+      <filelist dir="jars" files="jpedal.jar log4j-1.2.jar ulteo-applet.jar CheckJava.jar" />
     </copy>
   </target>
 
