Bugfix: add a missing picture in applet
git-svn-id: file:///home/code/svn/ovd/trunk@6147 2b2718be-6ee5-4ec5-ad1a-3fa14f9c7ca3

--- a/client/java/build.xml.in
+++ b/client/java/build.xml.in
@@ -275,6 +275,7 @@
   </target>
 
   <target name="applet.jar" description="sign jar applets" depends="applet" >
+    <copy file="icons/ulteo.png" todir="build/pics" />
     <copy file="windowsPathsJNI/libWindowsPaths.dll"
           todir="build/resources/WindowsLibs/32" />
     <copy file="required_libraries/libXClientArea/32/libXClientArea.so"
