--- a/client/wrapper/ressources.rc.in
+++ b/client/wrapper/ressources.rc.in
@@ -21,8 +21,8 @@
 #include <windows.h>
 
 1 VERSIONINFO
-FILEVERSION 0, 5, 0, 1
-PRODUCTVERSION 0, 5, 0, 1
+FILEVERSION @VERSION_STYLE_C@
+PRODUCTVERSION @VERSION_STYLE_C@
 FILEOS VOS__WINDOWS32
 FILETYPE VFT_APP
 {
@@ -32,10 +32,9 @@ BLOCK "0C0C04E4"
 {
 VALUE "ProductName", "OVD Native Client\0"
 VALUE "CompanyName", "Ulteo\0"
-VALUE "FileVersion", "0.5.0.1\0"
+VALUE "FileVersion", "@VERSION@\0"
 VALUE "InternalName", "OVD Native Client wrapper\0"
-VALUE "LegalCopyright", "Copyright © 2010 Ulteo\0"
-VALUE "OriginalFilename", "OVDWrapper.exe\0"
+VALUE "LegalCopyright", "Copyright © @YEAR@ Ulteo\0"
 VALUE "FileDescription", "Ulteo Open Virtual Desktop\0"
 }
 }
