--- a/packaging/windows/ovd-wrapper/package.conf
+++ b/packaging/windows/ovd-wrapper/package.conf
@@ -1,8 +1,14 @@
 
 svn_root: client\wrapper
 
-compile_commands:
+pre_sources_commads:
   - python autogen
+
+source_remove_files:
+  - autogen
+  - ressources.rc.in
+
+compile_commands:
   - make
 
 binary_files:
