Improvement: add a autogen to Integrated launcher to push OVD version into .exe
git-svn-id: file:///home/code/svn/ovd/trunk@6176 2b2718be-6ee5-4ec5-ad1a-3fa14f9c7ca3

--- a/packaging/windows/ovd-integrated-launcher/package.conf
+++ b/packaging/windows/ovd-integrated-launcher/package.conf
@@ -1,8 +1,19 @@
 
 svn_root: client\OVDIntegratedLauncher
 
+pre_sources_commads:
+  - python autogen
+
+source_remove_files:
+  - autogen
+  - configure.ac.in
+  - Makefile.am
+  - Makefile.POSIX
+  - Makefile.WIN32
+  - ressources.rc.in
+
 compile_commands:
-  - make -f Makefile.WIN32
+  - make
 
 binary_files:
   - "*.exe"
