--- a/client/OVDIntegratedLauncher/Makefile.WIN32
+++ b/client/OVDIntegratedLauncher/Makefile.WIN32
@@ -1,6 +1,7 @@
-# Copyright (C) 2009 Ulteo SAS
+# Copyright (C) 2009-2011 Ulteo SAS
 # http://www.ulteo.com
 # Author Thomas MOUTON <thomas@ulteo.com> 2010
+# Author Julien LANGLOIS <julien@ulteo.com> 2010
 #
 # This program is free software; you can redistribute it and/or
 # modify it under the terms of the GNU General Public License
@@ -30,17 +31,20 @@ CFLAGS= -Wall
 LDFLAGS= -lshlwapi
 
 SRC1=main.c spool.c platform.c
-OBJ1=$(SRC1:.c=.o)
+RES1=ressources.rc
+OBJ1=$(SRC1:.c=.o) $(RES1:.rc=.o)
 EXE1=UlteoOVDIntegratedLauncher.exe
 
 
-.SUFFIXES: .c
+.SUFFIXES: .c .rc
 
 all: $(EXE1) 
 
 $(EXE1): $(OBJ1)
 	$(CC) -o $(EXE1) $(OBJ1) $(LDFLAGS) -mwindows
 
+.rc.o :
+	$(RESC) -o $@ $<
 
 clean:
 	$(RM) $(EXE1) $(OBJ1)
