Improvement: add OVD shells wrapper into Windows\System32 on Windows Systems because shell can't resolve %PATH% for finding shell
git-svn-id: file:///home/code/svn/ovd/trunk@6181 2b2718be-6ee5-4ec5-ad1a-3fa14f9c7ca3

--- a/packaging/windows/setup-aps/setup.conf
+++ b/packaging/windows/setup-aps/setup.conf
@@ -34,3 +34,7 @@ arch:
         amd64:
           packages:
             - pdf-printer-driver-amd64
+
+    wrapper:
+      packages:
+        - ovd-shells_wrapper
