Packaging: bugfix: add forgotten '... || true' pattern at the end of some db_input commands
git-svn-id: file:///home/code/svn/ovd/trunk@6197 2b2718be-6ee5-4ec5-ad1a-3fa14f9c7ca3

--- a/packaging/debian/ovd-ha/lucid/ulteo-ovd-ha.config
+++ b/packaging/debian/ovd-ha/lucid/ulteo-ovd-ha.config
@@ -60,7 +60,7 @@ case ${#nics[*]} in
     0) db_input critical ulteo-ovd-ha/no_nic || true ; db_go ; exit 1 ;;
     1) db_set ulteo-ovd-ha/nic ${nics[0]} ;;
     *) db_subst ulteo-ovd-ha/nic choices $(echo ${nics[*]} | sed "s/ /, /")
-       db_input high ulteo-ovd-ha/nic ; db_go ;;
+       db_input high ulteo-ovd-ha/nic || true ; db_go ;;
 esac
 db_get ulteo-ovd-ha/nic && NIC="$RET"
 NIC_ADDR=$(ifconfig $NIC | awk -F":| +" '/inet addr/{print $4}')
