--- a/packaging/debian/ovd-session-manager/squeeze/ulteo-ovd-session-manager.config
+++ b/packaging/debian/ovd-session-manager/squeeze/ulteo-ovd-session-manager.config
@@ -21,7 +21,7 @@ if [ "$1" = "configure" ] && [ -z "$2" ] || [ "$1" = "reconfigure" ]; then
             ROOT_PW=""
             break
         fi
-        db_input critical ulteo-ovd-session-manager/password_mismatch
+        db_input critical ulteo-ovd-session-manager/password_mismatch || true
         db_reset ulteo-ovd-session-manager/admin_password
         db_reset ulteo-ovd-session-manager/admin_password_again
         db_go
