--- a/packaging/debian/ovd-slaveserver/squeeze/control
+++ b/packaging/debian/ovd-slaveserver/squeeze/control
@@ -19,7 +19,7 @@ Architecture: all
 Depends: ${python:Depends},
  ulteo-ovd-slaveserver, ulteo-ovd-shells, ulteo-ovd-externalapps-client,
  xrdp-python, xrdp-seamrdp, xrdp-disk, xrdp-printer, xrdp-sound, xrdp-clipboard,
- tightvncserver, desktop-file-utils, imagemagick, passwd, adduser, rsync
+ tightvncserver, desktop-file-utils, imagemagick, passwd, adduser, rsync, smbfs
 XB-Python-Version: ${python:Versions}
 Description: Ulteo Open Virtual Desktop - application server role for slave server
  Application server role for the Ulteo OVD slave server
