Improvement: still add/fix meta information into .exe file
git-svn-id: file:///home/code/svn/ovd/trunk@6219 2b2718be-6ee5-4ec5-ad1a-3fa14f9c7ca3

--- a/client/OVDIntegratedLauncher/ressources.rc.in
+++ b/client/OVDIntegratedLauncher/ressources.rc.in
@@ -31,10 +31,11 @@ BLOCK "StringFileInfo"
 BLOCK "0C0C04E4"
 {
 VALUE "ProductName", "OVD Native Client\0"
+VALUE "ProductVersion", "@VERSION@\0"
 VALUE "CompanyName", "Ulteo\0"
 VALUE "FileVersion", "@VERSION@\0"
 VALUE "InternalName", "OVD Integrated Launcher\0"
-VALUE "LegalCopyright", "Copyright (C) @YEAR@ Ulteo\0"
+VALUE "LegalCopyright", "Copyright (C) @YEAR@ Ulteo SAS\0"
 VALUE "FileDescription", "Ulteo Open Virtual Desktop\0"
 }
 }
