--- a/ApplicationServer/windows/wrapper/ressources.rc.in
+++ b/ApplicationServer/windows/wrapper/ressources.rc.in
@@ -31,10 +31,11 @@ BLOCK "StringFileInfo"
 BLOCK "040904B0"
 {
 VALUE "ProductName", "OVD\0"
+VALUE "ProductVersion", "@VERSION@\0"
 VALUE "CompanyName", "Ulteo\0"
 VALUE "FileVersion", "@VERSION@\0"
 VALUE "InternalName", "OVD Shells wrapper\0"
-VALUE "LegalCopyright", "Copyright (C) @YEAR@ Ulteo\0"
+VALUE "LegalCopyright", "Copyright (C) @YEAR@ Ulteo SAS\0"
 VALUE "FileDescription", "Ulteo Open Virtual Desktop\0"
 }
 }
