Improvement in doc Makefile
git-svn-id: file:///home/code/svn/ovd/trunk@6286 2b2718be-6ee5-4ec5-ad1a-3fa14f9c7ca3

--- a/docs/Makefile
+++ b/docs/Makefile
@@ -33,6 +33,10 @@ PDF=$(SRC:.xml=.pdf)
 
 all: $(DST) $(PDF)
 
+html: $(DST)
+
+pdf: $(PDF)
+
 # Add the depends between sources
 Installation_Iso.xml: Easy_Installation.xml
 Installation_Sources.xml: Installation.xml Installation_RedHat.xml
