Improvement: add web client config script
git-svn-id: file:///home/code/svn/ovd/trunk@6300 2b2718be-6ee5-4ec5-ad1a-3fa14f9c7ca3

--- a/client/web/config/Makefile.am
+++ b/client/web/config/Makefile.am
@@ -17,18 +17,23 @@
 # along with this program; if not, write to the Free Software
 # Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
 
+sbin_SCRIPTS = ovd-webclient-config
+
 default_DATA = config.inc.php
 defaultdir = $(datadir)/ulteo/webclient/default
 
 conf_DATA = config.inc.php apache2.conf
 confdir = $(sysconfdir)/ulteo/webclient
 
+ovd-webclient-config: ovd-webclient-config.in
+	sed "s/@PKG_VERSION@/$(PACKAGE_VERSION)/g" $< > $@
+
 apache2.conf: apache2.conf.in
-	sed "s,@DATADIR@,$(datadir)," < $(srcdir)/apache2.conf.in > $@
+	sed "s,@DATADIR@,$(datadir)," < $(srcdir)/$< > $@
 
 EXTRA_DIST = $(default_DATA) apache2.conf.in
 
 clean-local:
-	rm -f apache2.conf
+	rm -f apache2.conf ovd-webclient-config
 
 .PHONY: $(conf_DATA)
