Packaging: bugfix: add a forgotten file in makefile
git-svn-id: file:///home/code/svn/ovd/trunk@6302 2b2718be-6ee5-4ec5-ad1a-3fa14f9c7ca3

--- a/client/web/config/Makefile.am
+++ b/client/web/config/Makefile.am
@@ -31,7 +31,7 @@ ovd-webclient-config: ovd-webclient-config.in
 apache2.conf: apache2.conf.in
 	sed "s,@DATADIR@,$(datadir)," < $(srcdir)/$< > $@
 
-EXTRA_DIST = $(default_DATA) apache2.conf.in
+EXTRA_DIST = $(default_DATA) apache2.conf.in ovd-webclient-config.in
 
 clean-local:
 	rm -f apache2.conf ovd-webclient-config
