--- a/docs/Makefile
+++ b/docs/Makefile
@@ -17,6 +17,7 @@ SRC=AccountsIntegration.xml \
 	Support_Debian_Squeeze.xml \
 	Support_RHEL_5.5.xml \
 	Support_openSUSE_11.2.xml \
+	Support_openSUSE_11.3.xml \
 	Support_SLES_11.SP1.xml \
 	Support_Ubuntu_Hardy.xml \
 	Support_Ubuntu_Lucid.xml \
