--- a/packaging/debian/ovd-web-client/squeeze/control
+++ b/packaging/debian/ovd-web-client/squeeze/control
@@ -8,7 +8,7 @@ Standards-Version: 3.7.2
 Package: ulteo-ovd-web-client
 Architecture: all
 Depends: debconf, ulteo-ovd-applets, ulteo-ovd-l10n,
- php5, php5-curl, php5-gd, php-pear
+ php5, php5-curl, php5-gd, php-gettext, php-pear
 Recommends: ulteo-ovd-web-client-ajaxplorer
 Description: Ulteo Open Virtual Desktop - web client
  This is a web based client for Ulteo OVD.
