Typo: packaging applet description
git-svn-id: file:///home/code/svn/ovd/trunk@6417 2b2718be-6ee5-4ec5-ad1a-3fa14f9c7ca3

--- a/packaging/debian/ovd-java-clients/hardy/control
+++ b/packaging/debian/ovd-java-clients/hardy/control
@@ -8,7 +8,7 @@ Standards-Version: 3.8.2
 
 Package: ulteo-ovd-applets
 Architecture: all
-Description: Ulteo Open Virtual Desktop - desktop applet
+Description: Ulteo Open Virtual Desktop - applets
  This applet is used in the Open Virtual Desktop to display the user session in
  a browser.
 
